# team_18

./: Readme  app.py  feedback_evaluator.py  mood_predictor.py  mood_streamlit.py  pyproject.toml  replit.nix  requirements.txt  ui_streamlit_with_feedback.py
attached_assets/: Pasted-Pasted-Project-Name-EmoSense-AI-Understanding-Passion-Conviction-Emotion-in-Conversations-Projec-174-1740099013994.txt
path/to/your/dataframe/concatenation/: file
path/to/your/face/detection/: module
path/to/your/opencv/initialization/: file
path/to/your/transformers/usage/: file
src/: avatar_assistant.py  color_palette.py  emotional_arc.py  emotions.py  facial_analyzer.py  generate_audio_samples.py  health_plan_generator.py  journal_manager.py  mock_health_data.py  mood_recommendations.py  multimodal_fusion.py  ui_personalizer.py  utils.py  visualization.py  voice_analyzer.py
