[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.46.0",
    "deepface>=0.0.93",
    "librosa>=0.10.2.post1",
    "numpy>=1.26.0",
    "openai>=1.63.2",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.8.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scipy>=1.15.2",
    "sounddevice>=0.5.1",
    "streamlit>=1.42.2",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "twilio>=9.4.6",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
